kubernetes-arm/2-Traefik/traefik-v2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.20.161
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: web
    - protocol: TCP
      name: admin
      port: 8080
  selector:
    app: traefik
