kubernetes-arm/2-Traefik/traefik-internal-service.yaml
# ---
# kind: Service
# apiVersion: v1
# metadata:
#   name: traefik-ingress-service
#   namespace: kube-system
#   labels:
#     k8s-app: traefik-ingress-lb
# spec:
#   selector:
#     k8s-app: traefik-ingress-lb
#   ports:
#     - protocol: TCP
#       port: 80
#       name: web
#     - protocol: TCP
#       port: 443
#       name: https
#     - protocol: TCP
#       port: 8080
#       name: admin
#   type: LoadBalancer
#   loadBalancerIP: 192.168.20.161
# ---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
spec:
  rules:
  - host: traefik.k8s.home.masgras.us
    http:
      paths:
      - path: /admin
        backend:
          serviceName: traefik
          servicePort: admin
