kubernetes-arm/2-Traefik/traefik-v2-admin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-admin
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: admin
      port: 8080
  selector:
    app: traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-admin
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.k8s.home.masgras.us`) && PathPrefix(`/`)
    kind: Rule
    priority: 1
    services:
    - name: traefik-admin
      port: 8080
    tls: {}
